force-app/main/default/objects/Post__c/Post__c.object-meta.xml
<CustomObject>
    <label>Post</label>
    <nameField>
        <displayFormat>Post-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>