force-app/main/default/objects/Post__c/fields/Comments_Count__c.field-meta.xml
<CustomField>
    <fullName>Comments_Count__c</fullName>
    <label>Comments Count</label>
    <summaryForeignKey>Comment__c.Post__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>