force-app/main/default/objects/Post__c/fields/Is_Image_Attached__c.field-meta.xml
<CustomField>
    <fullName>Is_Image_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Image Attached</label>
    <type>Checkbox</type>
</CustomField>