force-app/main/default/objects/Post__c/fields/Is_Liked_By_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Liked_By_Current_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Liked By Current User</label>
    <type>Checkbox</type>
</CustomField>