force-app/main/default/objects/Post__c/fields/Like_Old_value__c.field-meta.xml
<CustomField>
    <fullName>Like_Old_value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Like Old value</label>
    <type>Checkbox</type>
</CustomField>