force-app/main/default/objects/Post__c/fields/Likes_Count__c.field-meta.xml
<CustomField>
    <fullName>Likes_Count__c</fullName>
    <label>Likes Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>