force-app/main/default/objects/Post__c/fields/Post_Owner__c.field-meta.xml
<CustomField>
    <fullName>Post_Owner__c</fullName>
    <label>Post Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>