force-app/main/default/objects/Post__c/fields/Post_User__c.field-meta.xml
<CustomField>
    <fullName>Post_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post User</label>
    <referenceTo>User_Login_Detail__c</referenceTo>
    <relationshipLabel>Posts</relationshipLabel>
    <relationshipName>Posts</relationshipName>
    <type>Lookup</type>
</CustomField>