force-app/main/default/objects/Post__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>Is_Image_Attached__c</columns>
    <columns>Image_Path__c</columns>
    <columns>Likes_Count__c</columns>
    <columns>Is_Liked_By_Current_User__c</columns>
    <columns>Post_Owner__c</columns>
    <columns>Post_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>